--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <service android:name="com.coolweather.app.service.AutoUpdateService"></service>
+        <receiver android:name="com.coolweather.app.receiver.AutoUpdateReceiver"></receiver>
+       
         <activity
             android:name="com.coolweather.app.activity.ChooseAreaActivity"
             android:label="@string/app_name" >
@@ -24,6 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.coolweather.app.activity.WeatherActivity"></activity>
+        
     </application>
 
 </manifest>
